
3. Fix: The strings.csv_field function is more in line with RFC 4180.  CR+LF line ending no longer returned on the last field.  Single quotes flag.

4. Fix: using equals for assignment gives an error message to use := instead.

5. Fix: get_line no longer reports an end-of-file when reading the last line of a file that doesn't have a newline.

6. Fix: --break once again shows the line where the execution stopped.

7. (Cameron Y) Change: test phase mode (--test) replaces development phase mode as the default.  Use development phase mode (--coding) to change to development phase.

8. New: strings.perl_match() performs PCRE library regular expressions.  PCRE now required for building SparForte. [tests needed]

CHANGES SINCE 2.2.1

9. Fix: using a built-in procedure as a function shows an appropriate error message rather than raising an exception.

10. Fix: using a built-in function as a shell command shows an appropriate error message rather than saying it's a field of a record type.

11. Fix: strings.perl_match() now works correctly.

12. Fix: removed "sourceFiles:" debugging statement from breakout prompt.

CHANGES SINCE 2.2.2

13. New: parameterized (generic) types can now be extended as types and subtypes or passed as parameters to user subprograms

14. New: parameterized (generic) types can now be defined as types and subtypes.  These types and subtypes can be passed as parameters to user subprograms.  Types extending resource types must be limited.

15. Change: record declarations may end with "end <type-name>" instead of "end record", but only if pragma ada_95 is not used. [tests needed]

16. New: function and procedure forward specifications. [docs needed].

17. Fix: multiple library paths (-L option) now work correctly.

18. Fix: trying to run a "with separate" file now produces an appropriate error message.

19. Fix: -p option now showing functions, procedures, blocks correctly. [Needs updating for forward specifications]
