@@ -42,5 +42,7 @@ CHANGES SINCE 2.2.2
 
 18. Fix: trying to run a "with separate" file now produces an appropriate error message.
 
-19. Fix: -p option now showing functions, procedures, blocks correctly. [Needs updating for forward specifications]
+19. Fix: -p option now showing functions, procedures, blocks correctly.
+
+20: New: -p option shows number of comments and comments/block statistics. (may be fooled by -- in strings).
 
